# medical_trial_acc

./: .env.example  .gitignore  README.md  app.py  app_streamlit.py  consolidated_app.py  main.py  pyproject.toml  run_streamlit.sh  server.py
data/: analysis_history.db  prompt  protocols.db  sop_oos_history.db
data/protocols/: protocol_001_diabetes_phase3.txt  protocol_002_oncology_phase2.txt  protocol_003_cardiology_phase3.txt
data/requirements/: requirements_diabetes_study.txt  requirements_oncology_study.txt  synthetic_req_duration_full_match.txt  synthetic_req_duration_no_evidence.txt  synthetic_req_duration_partial_match.txt
reports/: requirements_diabetes_study_analysis_20260105_125337.md  requirements_diabetes_study_analysis_20260105_130117.md  sample_analysis.md
src/: __init__.py  agent.py  compliance_analyzer.py  config.py  processor.py  report_generator.py  sop_oos_analyzer.py  vector_store.py
tests/: test_compliance_analyzer.py
