[project]
name = "medical-trial-acc"
version = "0.3.0"
description = "Clinical Trial Protocol Matcher - Match requirements to protocols with intelligent analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lancedb>=0.20.0",
    "pypdf>=4.0.0",
    "rich>=13.7.0",
    "sentence-transformers>=2.3.0",
    "langchain-text-splitters>=1.1.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-core>=0.1.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "pandas>=2.1.0",
    "langchain-community>=0.4.1",
    "pandas-stubs~=2.3.3",
    "fastapi>=0.128.0",
    "python-multipart>=0.0.22",
    "python-docx>=1.1.0",
    "openai>=1.0.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
